[package]
name = "orderbook"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "orderbook-server"
path = "src/server.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tungstenite = "0.13"
url = "2.2"
priority-queue = "1.3"
tokio-tungstenite = "0.15"
tonic = "0.9"
prost = "0.11"
futures = "0.3"
tokio-stream = "0.1.13"

[build-dependencies]
tonic-build = "0.9"

[build]
build = "build.rs"
