[package]
name = "orderbook"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "orderbook-server"
path = "src/server.rs"

[[bin]]
name = "orderbook-client"
path = "src/client.rs"

[dependencies]
futures = "0.3"
tonic = "0.9"
tungstenite = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.13"
prost = "0.11"

[build-dependencies]
tonic-build = "0.9"
